--- a/src/app/animales/buscar-animales/buscar-animales.component.html
+++ b/src/app/animales/buscar-animales/buscar-animales.component.html
@@ -1,24 +1,44 @@
-<html class="mt-3">
-<form style="background-color: rgb(255, 255, 255); -webkit-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
+<html>
+<form class="mt-5" style="background-color: rgb(255, 255, 255);-webkit-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
 -moz-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56); text-align: center;">
+box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
     <div class="container-fluid">
         <div>
-            <h5 class="alert alert-info text-center"><i class="fab fa-searchengin"></i> Buscar Animal</h5>
+            <h5 class="alert alert-info text-center"><i class="far fa-registered"></i> Buscar Animal</h5>
         </div>
     </div>
-    <ul>
+    <ul class="text-center">
         <li>
-            <label for="codigo">Codigo:</label>
-            <input type="texto" id="codigo" name="animal_codigo">
+            <label for="codigo">codigo:</label>
+            <input type="text" id="codigo" name="animal_codigo" [(ngModel)]="codigo">
         </li>
-
         <li>
-            <button type="submit" class="btn btn-success" (click)="consultarAnimales(animales.codigo)"><i class="far fa-save"></i> Buscar</button>
+            <label for="nombre">nombre:</label>
+            <input type="text" id="nombre" name="animal_nombre" [(ngModel)]="nombre">
+        </li>
+        <li>
+            <label for="especie">especie:</label>
+            <input type="text" id="especie" name="animal_especie" [(ngModel)]="especie">
+        </li>
+        <li>
+            <label for="fechaNacimiento">fechaNacimiento:</label>
+            <input type="text" id="fechaNacimiento" name="animal_edad" [(ngModel)]="fechaNacimiento">
+        </li>
+        <li>
+            <label for="fechaIngreso">fechaIngreso:</label>
+            <input type="text" id="fechaIngreso" name="animal_ingreso" [(ngModel)]="fechaIngreso">
+        </li>
+        
+        <li>
+            <label for="msg">descripcion:</label>
+            <textarea id="descripcion" name="animal_descripcion" [(ngModel)]="descripcion"></textarea>
+        </li>
+        
+        <li>
+            <button type="submit" class="btn btn-success" (click)="consultarAnimales()"><i class="far fa-save"></i>Buscar</button>
         </li>
 
     </ul>
-
     <style>
         form {
             /* Centrar el formulario en la página */
@@ -50,7 +70,7 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56); text-align: center;">
         input,
         textarea {
             /* Para asegurarse de que todos los campos de texto tienen la misma configuración de letra
-  Por defecto, las áreas de texto tienen un tipo de letra monoespaciada */
+     Por defecto, las áreas de texto tienen un tipo de letra monoespaciada */
             font: 1em sans-serif;
             /* Tamaño uniforme del campo de texto */
             width: 300px;
@@ -62,7 +82,7 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56); text-align: center;">
         input:focus,
         textarea:focus {
             /* Destacado adicional para elementos que tienen el cursor */
-            border-color: #000;
+            border-color: rgb(76, 108, 156);
         }
         
         textarea {
@@ -80,10 +100,9 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56); text-align: center;">
         
         button {
             /* Este margen adicional representa aproximadamente el mismo espacio que el espacio
-  entre las etiquetas y sus campos de texto */
+     entre las etiquetas y sus campos de texto */
             margin-left: .5em;
         }
     </style>
 </form>
-
 </html>
