--- a/src/app/animales/eliminar-animales/eliminar-animales.component.html
+++ b/src/app/animales/eliminar-animales/eliminar-animales.component.html
@@ -13,23 +13,7 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
             <input type="texto" id="codigo" name="animal_codigo">
         </li>
         <li>
-            <label for="nombre">Nombre:</label>
-            <input type="texto" id="nombre" name="animal_nombre">
-        </li>
-        <li>
-            <label for="especie">Especie:</label>
-            <input type="texto" id="especie" name="animal_especie">
-        </li>
-        <li>
-            <label for="fechaNacimiento">FechaNacimiento:</label>
-            <input type="texto" id="fechaNacimiento" name="animal_edad">
-        </li>
-        <li>
-            <label for="fechaIngreso">FechaIngreso:</label>
-            <input type="texto" id="fechaIngreso" name="animal_ingreso">
-        </li>
-        <li>
-            <button type="submit" class="btn btn-success"><i class="far fa-save"></i>
+            <button type="submit" class="btn btn-success" (click)="eliminarAnimal()"><i class="far fa-save"></i>
                 Eliminar</button>
         </li>
 
