--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -35,8 +35,8 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" routerLink="/registrar-animales"><i class="far fa-registered"></i> Registrar</a></li>
                         <li><a class="dropdown-item" routerLink="/listar-animales"><i class="fas fa-list"></i> Listar</a></li>
-                        <li><a class="dropdown-item" routerLink="/eliminar-animales"><i class="fas fa-eraser"></i> Eliminar</a></li>
-                        <li><a class="dropdown-item" routerLink="/buscar-animales"><i class="fab fa-searchengin"></i> Buscar</a></li>
+                      <!--  <li><a class="dropdown-item" routerLink="/eliminar-animales"><i class="fas fa-eraser"></i> Eliminar</a></li> -->
+                      <!--  <li><a class="dropdown-item" routerLink="/buscar-animales"><i class="fab fa-searchengin"></i> Buscar</a></li> -->
                     </ul>
                 </li>
     
