--- a/src/app/animales/listar-animales/listar-animales.component.html
+++ b/src/app/animales/listar-animales/listar-animales.component.html
@@ -1,36 +1,60 @@
-<html>
-<form class="mt-3" style="background-color:rgb(255, 255, 255);-webkit-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
--moz-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
-    <div class="container-fluid ">
-        <div class="mb-3">
-            <h5 class="alert alert-info text-center"><i class="fas fa-list"></i> Listar Animales</h5>
-        </div>
-        <div class="row">
+<div class="mb-3">
+    <h5 class="alert alert-info text-center"><i class="fas fa-list"></i> Listar Animales</h5>
+</div>
+<div class="container"> 
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">N°</th>
+                <th scope="col">codigo</th>
+                <th scope="col">nombre</th>
+                <th scope="col">especie</th>
+                <th scope="col">fechaNacimiento</th>
+                <th scope="col">fechaIngreso</th>
+                <th scope="col">descripcion</th>
+            </tr>
+        </thead>
+        <!--<div class="row">
             <div class="col">
-                Codigo
+                codigo
             </div>
             <div class="col">
-                Nombre
+                nombre
             </div>
             <div class="col">
-                Especie
+                especie
             </div>
             <div class="col">
-                FechaNacimiento
+                fechaNacimiento
             </div>
             <div class="col">
-                FechaIngreso
+                fechaIngreso
             </div>
             <div class="col">
-                Descripcion
-            </div>
+                descripcion
+            </div>-->
+        <tbody>
+            <tr *ngFor="let animales of listaAnimales;let i = index">
+                <td scope="row"> <strong>{{i+1}}</strong> </td>
+                <td>{{animales.codigo}}</td>
+                <td>{{animales.nombre}}</td>
+                <td>{{animales.especie}}</td>
+                <td>{{animales.fechaNacimiento}}</td>
+                <td>{{animales.fechaIngreso}}</td>
+                <td>{{animales.descripcion}}</td>
+                <td class="align-middle" style="width: 10%;">
+                    <div class="row">
+                        <div class="col-5">
+                            <button placement="top" ngbTooltip="Eliminar" type="button" class="btn btn-danger" (click)="eliminar(animales.codigo)" ><i class="fas fa-minus"></i></button>
+                        </div> 
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
-            <button type="submit" class="btn btn-success"><i class="fas fa-eraser"></i>
-                 Listar
-                </button>
-        </div>
-    </div>
+<!--
     <style>
         form {
             /* Centrar el formulario en la página */
@@ -42,24 +66,24 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
             border: 1px solid #CCC;
             border-radius: 1em;
         }
-        
+
         ul {
             list-style: none;
             padding: 0;
             margin: 0;
         }
-        
+
         form li+li {
             margin-top: 1em;
         }
-        
+
         label {
             /* Tamaño y alineación uniforme */
             display: inline-block;
             width: 90px;
             text-align: right;
         }
-        
+
         input,
         textarea {
             /* Para asegurarse de que todos los campos de texto tienen la misma configuración de letra
@@ -71,26 +95,26 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
             /* Hacer coincidir los bordes del campo del formulario */
             border: 1px solid #999;
         }
-        
+
         input:focus,
         textarea:focus {
             /* Destacado adicional para elementos que tienen el cursor */
             border-color: #000;
         }
-        
+
         textarea {
             /* Alinear los campos de texto multilínea con sus etiquetas */
             vertical-align: top;
             /* Proporcionar espacio para escribir texto */
             height: 5em;
         }
-        
+
         .button {
             /* Alinear los botones con los campos de texto */
             padding-left: 90px;
             /* mismo tamaño que los elementos de la etiqueta */
         }
-        
+
         button {
             /* Este margen adicional representa aproximadamente el mismo espacio que el espacio
   entre las etiquetas y sus campos de texto */
@@ -99,4 +123,25 @@ box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
     </style>
 </form>
 
-</html>
+</html>-->
+
+
+<!--<html>
+    <head>
+        <title>Mostrar Animales</title>
+        <link rel="stylesheet" type="text/css" href="estilo.css">
+    </head>
+    <body>
+        <h1>Mostrando Animales</h1>
+        <table>
+            <tr>
+                <th>Codigo</th>
+                <th>Nombre</th>
+                <th>Especie</th>
+                <th>FechaNacimiento</th>
+                <th>FechaIngreso</th>
+                <th>Descripcion</th>
+            </tr>
+        </table>
+    </body>
+</html> -->
